--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <title>Home Page</title>
+    <head>
+        <link rel="stylesheet" href="./style.css" type="text/css">
   </head>
+    </html>
   <header>
     <nav>
       <ul>
